--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
     "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
     "ng2-search-filter": "^0.5.1",
     "ngx-pagination": "^4.0.0",
-    "ngx-pipes": "^2.5.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
